--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-simple-image-slider": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
