--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/notes.txt
-server/node_modules
-server/*.env
-client/node_modules
+node_modules/
 coverage/
 build/
 .DS_Store
-README.md
+.env
+*.pdf
+*.txt
+*.md
